--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 /* SIDE BANNER  */
 .header-container{
     background-image: url("assets/back009.png");
-    border: 1px solid white; 
+    /* border: 1px solid white;  */
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
